crates/pdfmuse-core/tests/snapshots/snapshots__docx_md.snap
---
source: crates/pdfmuse-core/tests/snapshots.rs
expression: "snapshot_markdown(\"sample.docx\")"
---
# Report

Intro paragraph.

| Header | Header |
| --- | --- |
| a | b |
