crates/pdfmuse-core/tests/snapshots/snapshots__table_md.snap
---
source: crates/pdfmuse-core/tests/snapshots.rs
expression: "snapshot_markdown(\"table.pdf\")"
---
| A | B |
| --- | --- |
| C | D |
